# Chess-with-Friends

./: .gitignore  CMakeLists.txt  README.md  main.py
.github/workflows/: Python-Test.yml  python-package-conda.yml
client/schemas/: chess.proto  chess_common.fbs  chess_pb2_grpc.py  chess_request.fbs
client/src/: main.py
client/src/assets/work/: chess_pieces.psd
client/src/bishop/: bishop.py
client/src/board/: board.py
client/src/chess_game_client/: chess_client.py  chess_pb2.py
client/src/components/: board.py  chess_piece.py  constants.py  game_controller.py  gui.py  main.py  piece.py  player.py  square.py  state_handler.py  ui.py  user_interface.py
client/src/game/: game_controller.py
client/src/king/: king.py
client/src/knight/: knight.py
client/src/piece/: piece.py
client/src/piece_type/: rook.py
client/src/player/: player.py
client/src/queen/: queen.py
client/src/rook/: rook.py
client/src/settings/: constants.py
client/src/square/: square.py
client/src/state/: state_handler.py
client/unit_tests/: board_test.py  piece_test.py  state_test.py
dev/: 0-FAST-README.md  00-docker-install-ubuntu.sh  01-build.sh  02-enter.sh  1-WSL-README.md  2-README.md  3-IDE-README.md  Dockerfile  IDE-README.md  README.md  init.lua
python/: README.md
python/board/: boardclass.py
python/piece/: piececlass.py
schema/communication/: communication.fbs
schema/game/: game.fbs
server/schemas/: chess_response.fbs
server/src/: chess_server.cpp
tedtactoe/: tedtactoe.java
